# cw-merkle-drop-tokenfactory

./: .gitignore  Beaker.toml  Cargo.toml  README.md
.github/workflows/: contracts.yml
contracts/merkle-drop/: Cargo.toml  NOTICE
contracts/merkle-drop/examples/: schema.rs
contracts/merkle-drop/schema/: config.json  execute_msg.json  get_root_response.json  get_subdenom_response.json  instantiate_msg.json  query_msg.json
contracts/merkle-drop/src/: contract.rs  error.rs  execute.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  reply.rs  state.rs
contracts/merkle-drop/tests/: claim.rs  set_denom.rs  test_env.rs
contracts/signature-verify/: Cargo.toml
contracts/signature-verify/src/: msg.rs  (+1 more)
frontend/: README.md  package.json
frontend/codegen/: MerkleDrop.client.ts  MerkleDrop.types.ts  index.ts
frontend/components/: navbar.tsx  wallet.tsx
frontend/config/: contract.ts
frontend/pages/: _app.tsx  claim.tsx  index.tsx  index2.tsx
frontend/rust/merkle-binding/: Cargo.toml
frontend/rust/merkle-binding/src/: lib.rs
frontend/scripts/: codegen.js
frontend/wasm-lib/: Cargo.toml
frontend/wasm-lib/src/: airdrop.csv  lib.rs
helpers/: create-csv.sh
helpers/merkle/: Cargo.toml
helpers/merkle-cli/: Cargo.toml  README.md
helpers/merkle-drop-cli/: Cargo.toml
helpers/merkle-drop-cli/src/: generate_merkle_root.rs  generate_root.rs  get_proof.rs  lib.rs  main.rs
helpers/merkle-tree/: Cargo.toml
testdata/: address_amount.csv  addresses_only.csv  mint_tx.json  proof_data.json  proof_data_address_amount.json  proof_data_addresses_only.json  uosmo_only.csv
ts/sdk/: README.md  package.json  typedoc.json
(+23 files in other folders)
