[workspace]

[package]
name = "airdrop-definition"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.78"
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
