[package]
name = "merkle-drop-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
csv = "1.1"
merkle_light = "0.4.0"
merkle_light_derive = "0.4.0"
sha2 = "0.10.5"
