[package]
name = "merkle-drop-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
csv = "1.1"
solana-merkle-tree = "1.11.10"
hex = "0.4.3"
solana-program = "1.11.10"
