[package]
name = "merkle-binding"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "Frontend bindings to the Merkle Tree"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.78"
serde-wasm-bindgen = "0.4"
merkle = { path = "../../../helpers/merkle" }
